High contrast fixes

--- a/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
+++ b/vtr-ui/src/app/components/pages/page-device-settings/children/subpage-device-settings-display/subpage-device-settings-display.component.scss
@@ -82,10 +82,12 @@
 				font-size: 1.2rem;
 				letter-spacing: 0.76px;
 				@media #{$black-on-white} {
-					color: $yellow;
+					color: $high-contrast-blue;
+					border:none;
 				}
 				@media #{$white-on-black} {
-					color: $blue-lighter;
+					color: $yellow;
+					border:none;
 				}
 			}
 		}
