--- a/vtr-ui/src/app/components/ui/ui-switch-onoff/ui-switch-onoff.component.scss
+++ b/vtr-ui/src/app/components/ui/ui-switch-onoff/ui-switch-onoff.component.scss
@@ -59,7 +59,7 @@ input.wifi-checked + .switch {
 	background: linear-gradient($gradient_angle, $go 0%, $go_light 100%);
 	transition: background 1.2s;
 	@media #{$black-on-white} {
-		background: darkviolet;
+		background:  $high-contrast-white-textselected;
 	}
 	@media #{$white-on-black} {
 		background: $highlight_bright;
@@ -84,6 +84,12 @@ input.wifi-checked + .switch {
 	-webkit-box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
 	box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.4);
 	transition: background-color 0.4s, left 0.2s;
+	@media #{$black-on-white} {
+		background-color: $light;
+	}
+	@media #{$white-on-black} {
+		background-color: $dark;
+	}
 }
 
 input.wifi-checked + .switch > small {
