--- a/vtr-ui/src/app/components/widgets/power-smart-settings/power-smart-settings.component.scss
+++ b/vtr-ui/src/app/components/widgets/power-smart-settings/power-smart-settings.component.scss
@@ -81,6 +81,12 @@
       cursor: pointer;
       font-size: 1.6rem;
       font-weight: $weight_bold;
+      @media #{$black-on-white} {
+        color: $high-contrast-blue;
+    }
+  @media #{$white-on-black} {
+    color: $yellow;
+    }
       &:hover {
         list-style: none;
         color: $light;
@@ -92,5 +98,11 @@
     color: $light;
     text-decoration: underline;
     cursor: pointer;
+    @media #{$black-on-white} {
+      color: $high-contrast-blue;
+  }
+@media #{$white-on-black} {
+  color: $yellow;
+  }
   }
 }
